--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Frédéric Gaudet <fred@linuxmint.com>
 Standards-Version: 3.7.3
+Build-Depends: debhelper (>= 6), dh-make
 
 Package: plymouth-theme-netrunner-logo
 Architecture: all
